// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`core/helpers/combine_styles returns new style array from 2 arrays 1`] = `
Array [
  Object {
    "alignContent": "center",
  },
  Object {
    "alignSelf": "center",
  },
  Object {
    "backfaceVisibility": "hidden",
  },
]
`;

exports[`core/helpers/combine_styles returns new style array from an object and an array 1`] = `
Array [
  Object {
    "alignContent": "center",
  },
  Object {
    "alignSelf": "center",
  },
]
`;

exports[`core/helpers/combine_styles returns new style object 1`] = `
Object {
  "alignContent": "center",
  "alignSelf": "center",
}
`;
